vagrant/roles/setup/files/ing-grafana.yaml
---
apiVersion:                         networking.k8s.io/v1
kind:                               Ingress
metadata:
  name:                             grafana-ingress
  namespace:                        monitoring
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
  - hosts:
      - grafana.microk8s.local
    secretName:                     grafana-ingress
  rules:
  - host:                           grafana.microk8s.local
    http:
      paths:
      - path:                       /
        pathType:                   Prefix
        backend:
          service:
            name:                   grafana
            port:
              number:               3000
