vagrant/roles/setup/files/ing-kibana.yaml
---
apiVersion:                         networking.k8s.io/v1
kind:                               Ingress
metadata:
  name:                             kibana-ingress
  namespace:                        kube-system
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
  - hosts:
      - kibana.microk8s.local
    secretName:                     kibana-ingress
  rules:
  - host:                           kibana.microk8s.local
    http:
      paths:
      - path:                       /
        pathType:                   Prefix
        backend:
          service:
            name:                   kibana-logging
            port:
              number:               5601
